--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -29,5 +29,5 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add README.md
-          git diff --staged --quiet || git commit -m 'docs: auto-generate README'
-          git push```
+          git commit -m 'docs: auto-generate README'
+          git push
