--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -3,7 +3,7 @@ name: Generate README
 on:
   push:
     branches:
-      - main
+      - master
   schedule:
     - cron: '0 0 * * *'
   workflow_dispatch:
