--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -29,5 +29,9 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add README.md
-          git commit -m 'docs: auto-generate README'
-          git push
+          if [ -n "$(git status --porcelain)" ]; then
+            git commit -m 'docs: auto-generate README'
+            git push
+          else
+            echo "No changes to commit"
+          fi
