--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install deps
+        run: npm install
+
       - name: Generate README
         run: node generateReadme.js > README.md
 
