--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Generate README
-        run: node generateReadme.js > README.md
+        run: npm run build > README.md
 
       - name: Commit and push if changed
         run: |
