--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -25,13 +25,14 @@ jobs:
         run: npm install
 
       - name: Generate README
-        run: npm run build > README.md
+        run: npm generateReadme.js > README.md
 
       - name: Commit and push if changed
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add README.md
+          git add assets/*
           if [ -n "$(git status --porcelain)" ]; then
             git commit -m 'docs: auto-generate README'
             git push
